# Province

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.0e8ca5e  CMakeLists.txt.user.27c28c0  Functions.cpp  Functions.h  README.md  data.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_pavlovo_location_markers  menudial.cpp  menudial.h  menudial.ui  notificationqueue.cpp  notificationqueue.h  overlaystatus.cpp  overlaystatus.h  popup.cpp  popup.h  selfplay.cpp  settings.cpp  settings.h  settingsform.cpp  settingsform.h  settingsform.ui  sex.cpp  sexviewform.cpp  sexviewform.h  sexviewform.ui  timeServer.cpp  timeServer.h  video.cpp  video.h  weather.cpp  weather.h
.qtcreator/: CMakeLists.txt.user.27c28c0
actions/shave/: legs.webm  pubic.webm
data/: actions.qrc  body.qrc  clothes.qrc  data.qrc  items.qrc  locations.qrc  npc.qrc  qwest.qrc
img/body/face/: cosmetic.webm
img/clothing/0/: 0.webm  6.webm
img/start/: 4.webm  5.webm
locations/: locations.list  map_pavlovo_location_markers  map_pavlovo_player_markers  time_markers
locations/gadukino/: gadukino.loc
locations/gadukino/gaddvor/: bana.loc  gaddvor.loc  garden.loc  izba.loc  sarai.loc
locations/gadukino/gaddvor/izba/: izba.loc
locations/pavlovo/: pavlovo.loc
locations/pavlovo/Gshveyfab/: Gshveyfab.loc
locations/pavlovo/apteka/: apteka.loc
locations/pavlovo/barbershop/: barbershop.loc
locations/pavlovo/cinema/: cinema.loc
locations/pavlovo/delParco/: delParco.loc
locations/pavlovo/gamehall/: gamehall.loc
locations/pavlovo/gargazel/: gargazel.loc
locations/pavlovo/gdk/: gdk.loc
locations/pavlovo/ghomeyard/: ghomeyard.loc
locations/pavlovo/ghomeyard/podezd/: podezd.loc
locations/pavlovo/ghomeyard/podezd/2floor/: 2floor.loc
locations/pavlovo/ghomeyard/podezd/2floor/parents_home/: parents_home.loc
locations/pavlovo/ghomeyard/podezd/2floor/parents_home/bathroom_parents/: bathroom_parents.loc
locations/pavlovo/ghomeyard/podezd/2floor/parents_home/bedr_parents/: bedr_parents.loc
locations/pavlovo/ghomeyard/podezd/2floor/parents_home/my_bedr_parents/: my_bedr_parents.loc
locations/pavlovo/grinok/: grinok.loc
locations/pavlovo/hospital/: hospital.loc
locations/pavlovo/hotel/: hotel.loc
locations/pavlovo/parents_home/: bathroom_parents.loc  bedr_parents.loc  guestroom_parents.loc  kitchen_parents.loc  my_bedr_parents.loc  parents_home.loc
locations/pavlovo/park/: park.loc
locations/pavlovo/rail_station/: rail_station.loc
locations/pavlovo/rail_station/gkafe/: gkafe.loc
locations/pavlovo/rail_station/pamyatnik/: pamyatnik.loc
locations/pavlovo/rail_station/vokzal/: vokzal.loc
locations/pavlovo/rail_station/vokzal/vokzalg_kabinet/: vokzalg_kabinet.loc
locations/pavlovo/rail_station/vokzal/vokzalg_toilet_f/: vokzalg_toilet_f.loc
locations/pavlovo/road/: road.loc
locations/pavlovo/school/: school.loc
locations/pavlovo/supermarket/: supermarket.loc
nav/: GameObj.h  bath.cpp  bathroom.cpp  bathroom.h  bed.cpp  bed.h  cloth.cpp  cloth.h  clothform.cpp  clothform.h  clothform.ui  clothformTrash.cpp  clothformTrash.h  clothformTrash.ui  coffee.cpp  coffee.h  gameobj.cpp  gameobj.h  iceacream.cpp  iceacream.h  location.cpp  location.h  locationform.cpp  locationform.h  locationform.ui  mapform.cpp  mapform.h  mapform.ui  mirror.cpp  mirror.h  objviewform.cpp  objviewform.h  objviewform.ui  qactionbutton.cpp  qactionbutton.h  scenemarker.cpp  scenemarker.h  sceneviewer.cpp  sceneviewer.h  shop.cpp  (+3 more)
npc/: npc.cpp  npc.h
player/: bagform.cpp  bagform.h  bagform.ui  ccalko.cpp  ccalko.h  ccsex.cpp  ccsex.h  cloth.cpp  cloth.h  enums.h  item.cpp  item.h  itemform.cpp  itemform.h  itemform.ui  player.cpp  player.h  playerDesc.cpp  playerTimeSlots.cpp  pregnancy.cpp  pregnancy.h  tabwidgetplayer.cpp  tabwidgetplayer.h  tabwidgetplayer.ui  wardrobe.cpp  wardrobe.h
qwest/father/: bath_voyer_0.webm  bath_voyer_2.webm
sex/: ccsex.cpp  ccsex.h  selfplay.cpp  selfplay.h  sex.cpp  sex.h  sexviewform.cpp  sexviewform.h
